correct params for new customer.
